# match-recognize-datagen

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: __init__.py  examples.py  pattern_insertions_example.py
match_recognize_datagen/: __init__.py  config.py  define.py  generator.py  output.py  pattern.py
parquet_tests/: run_tests.py  test_parquet_output.py
pattern_insertions_approach/: __init__.py  config.py  generator.py  sampling.py
scripts/: main.py
