[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "match-recognize-datagen"
version = "0.1.0"
description = "Synthetic data generator for MATCH RECOGNIZE queries"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "pyarrow>=6.0.0",
]

[tool.setuptools]
packages = ["match_recognize_datagen"]
